--- a/anime/windbreakerseason1.html
+++ b/anime/windbreakerseason1.html
@@ -1,202 +1,145 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Wind Breaker – Season 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Wind Breaker - Season 1</title>
   <script async src="https://www.youtube.com/iframe_api"></script>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600;800&display=swap" rel="stylesheet">
   <style>
     :root {
-      --bg: #0b0f1a;
-      --fg: #fff;
-      --accent: #8e2de2;
-      --ctrl-bg: rgba(0,0,0,0.6);
-      --neon: #39ff14;
-      --font: 'Poppins', sans-serif;
+      --bg-color: #0b0f1a;
+      --text-color: #ffffff;
+      --accent-color: #8e2de2;
+      --control-bg: rgba(0, 0, 0, 0.6);
+      --neon-glow: #39ff14;
+      --box-border: 0 0 10px var(--neon-glow);
+      --font-family: 'Poppins', sans-serif;
     }
-    * { box-sizing: border-box; }
-    body {
-      margin: 0;
-      padding: env(safe-area-inset);
-      font-family: var(--font);
-      background: var(--bg);
-      color: var(--fg);
+    html, body {
+      height: 100%; margin: 0; font-family: var(--font-family);
+      background-color: var(--bg-color); color: var(--text-color);
       overflow-x: hidden;
-    }/* Video container ratio using padding hack */
-.video-container {
-  position: relative;
-  width: 100%;
-  height: 0;
-  padding-bottom: 56.25%; /* 16:9 */
-  max-width: 900px;
-  margin: 1rem auto;
-  background: black;
-  overflow: hidden;
-}
-/* Fullscreen: override padding hack and fill viewport */
-.video-container:fullscreen,
-.video-container:-webkit-full-screen,
-.video-container:-moz-full-screen,
-.video-container:-ms-fullscreen {
-  width: 100vw !important;
-  height: 100vh !important;
-  padding-bottom: 0 !important;
-  margin: 0;
-}
-
-/* Iframe fill & center video */
-#videoPlayer iframe {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100% !important;
-  height: 100% !important;
-  object-fit: contain;
-  object-position: center center;
-}
-.video-container:fullscreen iframe,
-.video-container:-webkit-full-screen iframe {
-  object-fit: contain;
-  object-position: center center;
-}
-
-/* Overlay & controls */
-.overlay-layer {
-  position: absolute;
-  top: 0; left: 0;
-  width: 100%; height: 100%;
-  pointer-events: none;
-}
-.controls {
-  position: absolute;
-  bottom: 0; left: 50%;
-  transform: translateX(-50%);
-  display: flex; gap: 0.5rem;
-  padding: 0.5rem;
-  background: rgba(0,0,0,0.4);
-  pointer-events: auto;
-  opacity: 0; transition: opacity 0.3s;
-  flex-wrap: wrap;
-}
-.control-btn {
-  background: var(--ctrl-bg);
-  color: var(--fg);
-  border: none;
-  padding: 0.4rem 0.8rem;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 0.875rem;
-}
-.control-btn:hover { background: var(--accent); }
-
-.progress-bar {
-  position: absolute;
-  bottom: 2.5rem; left: 10%;
-  width: 80%; height: 0.5rem;
-  background: rgba(255,255,255,0.3);
-  cursor: pointer;
-  pointer-events: auto;
-  opacity: 0; transition: opacity 0.3s;
-  border-radius: 4px;
-}
-.progress { height: 100%; background: var(--accent); width: 0%; }
-
-/* Episode & UI */
-.nav-buttons, .episode-display, .description-box, #episodeList {
-  max-width: 900px; margin: 1rem auto; text-align: center;
-  padding: 0 1rem;
-}
-.nav-buttons button, .episode-btn {
-  background: var(--ctrl-bg);
-  color: var(--fg);
-  border: none; padding: 0.5rem 1rem;
-  margin: 0.25rem; border-radius: 4px;
-  cursor: pointer;
-  font-size: 0.875rem;
-}
-.episode-btn.active { background: var(--accent); }
-.search-box {
-  display: block; width: 90%; max-width: 400px;
-  margin: 1rem auto; padding: 0.5rem;
-  border: none; border-radius: 4px;
-  background: var(--ctrl-bg); color: var(--fg);
-  font-size: 1rem;
-}
-.description-box {
-  background: rgba(0,0,0,0.6);
-  padding: 1rem; border-radius: 6px;
-  box-shadow: 0 0 10px var(--neon);
-  font-size: 0.9rem;
-}
-
-/* Episode grid responsive */
-#episodeList {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-  gap: 0.5rem;
-}
-.episode-btn { white-space: nowrap; overflow: hidden; text-overflow: ellipsis; }
-
-/* Loader */
-.loader-overlay {
-  position: fixed; inset: 0;
-  background: rgba(0,0,0,0.8);
-  display: none; align-items: center; justify-content: center;
-  z-index: 999;
-  flex-direction: column;
-  color: var(--fg);
-  font-size: 1rem;
-  padding: 1rem;
-  text-align: center;
-}
-.loader-bar-container {
-  width: 80%; max-width: 300px; height: 0.5rem;
-  background: rgba(255,255,255,0.2); border-radius: 4px;
-  overflow: hidden; margin-bottom: 0.5rem;
-}
-.loader-bar { width: 0; height: 100%; background: var(--accent); transition: width 0.1s linear; }
-
-/* Mobile tweaks */
-@media (max-width: 640px) {
-  .controls { gap: 0.25rem; padding: 0.25rem; }
-  .control-btn { padding: 0.3rem 0.6rem; font-size: 0.75rem; }
-  .progress-bar { bottom: 2rem; left: 5%; width: 90%; }
-  #episodeList { grid-template-columns: repeat(auto-fill, minmax(100px, 1fr)); gap: 0.25rem; }
-  .nav-buttons button, .episode-btn { padding: 0.4rem 0.6rem; font-size: 0.8rem; }
-  .episode-display { font-size: 1rem; }
-  .description-box { font-size: 0.85rem; padding: 0.75rem; }
-}
-
+    }
+    .loader-overlay {
+      position: fixed; top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.8);
+      display: none; /* hidden by default */
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .loader-bar-container {
+      width: 80%; max-width: 400px;
+      height: 10px;
+      background: rgba(255,255,255,0.2);
+      border-radius: 5px;
+      overflow: hidden;
+      margin-bottom: 10px;
+    }
+    .loader-bar {
+      width: 0%; height: 100%;
+      background: var(--accent-color);
+      transition: width 0.1s linear;
+    }
+    .video-container {
+      position: relative; padding-top: 56.25%; max-width: 800px;
+      margin: 20px auto; background-color: black;
+    }
+    #videoPlayer, .overlay-layer {
+      position: absolute; top: 0; left: 0;
+      width: 100%; height: 100%;
+    }
+    .controls, .progress-bar, .toggle-btn {
+      opacity: 0; transition: opacity 0.3s;
+    }
+    .controls {
+      position: absolute; bottom: 10px; left: 50%;
+      transform: translateX(-50%); display: flex; gap: 6px;
+    }
+    .control-btn {
+      background-color: var(--control-bg); color: var(--text-color);
+      border: none; padding: 6px 10px; border-radius: 6px;
+      cursor: pointer; font-size: 12px;
+    }
+    .control-btn:hover { background-color: var(--accent-color); }
+    .progress-bar {
+      position: absolute; bottom: 38px; left: 10%; width: 80%; height: 12px;
+      background: rgba(255,255,255,0.3); cursor: pointer;
+    }
+    .progress { height: 100%; background: var(--accent-color); width: 0%; }
+    .toggle-btn {
+      position: absolute; top: 10px; right: 10px;
+      background-color: var(--accent-color); color: var(--text-color);
+      padding: 6px 12px; border: none; border-radius: 6px; cursor: pointer;
+    }
+    .episode-btn { padding: 10px; background: #2d2d3d; border-radius: 6px; text-align: center; cursor: pointer; }
+    .episode-btn.active { background: var(--accent-color); }
+    .episode-btn:hover { background: #444; }
+    .search-box {
+      display: block; width: 100%; max-width: 400px;
+      margin: 1rem auto; padding: 8px 12px; border-radius: 6px;
+      border: none; background-color: var(--control-bg); color: var(--text-color);
+    }
+    .description-box {
+      max-width: 800px; margin: 20px auto;
+      background: rgba(0,0,0,0.6); padding: 15px;
+      border-radius: 8px; box-shadow: var(--box-border);
+    }
+    .episode-display { text-align: center; margin-top: 8px; font-weight: bold; }
+    #episodeList { display: grid; grid-template-columns: repeat(4, 1fr); gap: 8px; max-width: 800px; margin: 20px auto; }
   </style>
 </head>
-<body>  <!-- Loader -->  <div id="loaderOverlay" class="loader-overlay">
-    <div class="loader-bar-container"><div id="loaderBar" class="loader-bar"></div></div>
-    <p>Loading episodes…</p>
-  </div>  <header class="text-center mt-4">
-    <h1 class="text-3xl font-bold">Wind Breaker – Season 1</h1>
-  </header>  <div class="video-container" id="videoContainer" onmousemove="showControls()">
+<body>
+  <!-- Loader Popup -->
+  <div id="loaderOverlay" class="loader-overlay">
+    <div class="loader-bar-container">
+      <div id="loaderBar" class="loader-bar"></div>
+    </div>
+    <p>Loading episodes...</p>
+  </div>
+
+  <header class="text-center mt-4">
+    <h1 class="text-4xl font-extrabold">Wind Breaker - Season 1</h1>
+  </header>
+
+  <div class="video-container" onmousemove="showControls()">
     <div id="videoPlayer"></div>
     <div class="overlay-layer" onclick="togglePlayPause()"></div>
     <div class="progress-bar" id="progress-bar"><div class="progress" id="progress"></div></div>
     <div class="controls" id="videoControls">
-      <button class="control-btn" onclick="seek(-10)">« 10s</button>
+      <button class="control-btn" onclick="seek(-10)">-10s</button>
       <button class="control-btn" onclick="togglePlayPause()">Play/Pause</button>
-      <button class="control-btn" onclick="seek(10)">10s »</button>
+      <button class="control-btn" onclick="seek(10)">+10s</button>
       <button class="control-btn" onclick="toggleFullscreen()">Fullscreen</button>
       <button id="muteToggle" class="control-btn">Mute</button>
     </div>
-  </div>  <div class="nav-buttons">
-    <button onclick="prevEpisode()">Previous</button>
-    <button onclick="nextEpisode()">Next</button>
+    <button class="toggle-btn">Customize UI</button>
   </div>
-  <div class="episode-display" id="episodeDisplay">Episode 1</div>  <div class="description-box">
+
+  <div class="nav-buttons text-center mt-2">
+    <button class="control-btn" onclick="prevEpisode()">Previous</button>
+    <button class="control-btn" onclick="nextEpisode()">Next</button>
+  </div>
+  <div class="episode-display" id="episodeDisplay">Episode 1</div>
+
+  <div class="description-box">
     <h2 class="text-xl font-semibold mb-2">Description</h2>
     <p>Haruka Sakura wants nothing to do with weaklings—he's only interested in the strongest of the strong...</p>
-    <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia','_blank')">Subscribe to Muse Asia</button>
-  </div>  <input id="searchBox" class="search-box" placeholder="Search episodes…" oninput="filterEpisodes()">
-  <div id="episodeList"></div>  <footer class="text-center text-gray-400 text-sm mb-4">
-    Thank you for visiting! Please <strong>subscribe to Muse India</strong> to support anime in our region.
-  </footer>  <script>
+    <button class="control-btn mt-2" onclick="window.open('https://youtube.com/@museasia', '_blank')">Subscribe to Muse Asia</button>
+  </div>
+
+  <input type="text" id="searchBox" class="search-box" placeholder="Search episodes..." oninput="filterEpisodes()">
+  <div id="episodeList"></div>
+
+  <footer class="mt-10 text-sm text-center text-gray-400">
+    <p>Thank you for visiting! Please <strong>subscribe to Muse India</strong> to support anime in our region.</p>
+  </footer>
+
+  <script>
     const episodes = [
       { title: "Episode 1", link: "ne0Y0vyjxpE" },
       { title: "Episode 2", link: "J2568cnOa1g" },
@@ -213,29 +156,157 @@
       { title: "Episode 13", link: "-xUk9E2iQQY" }
     ];
 
-    let player, idx = 0, hideCtrlsTimer, dragging = false;
+    let player, currentEpisodeIndex = 0, hideControlsTimer, isDragging = false;
 
     function showLoader() {
-      const o = document.getElementById('loaderOverlay'), b = document.getElementById('loaderBar');
-      o.style.display = 'flex';
-      let t=0, dur=3000;
-      const iv = setInterval(()=>{ t+=50; b.style.width = Math.min(t/dur*100,100) + '%'; if(t>=dur) clearInterval(iv); },50);
-    }
-    function hideLoader(){ document.getElementById('loaderOverlay').style.display = 'none'; }
-
-    function onYouTubeIframeAPIReady(){
-      player = new YT.Player('videoPlayer',{ videoId: episodes[0].link, playerVars:{ autoplay:1, controls:0, modestbranding:1, rel:0, playsinline:1 }, events:{ onReady: setupPlayer, onStateChange: e=>{ if(e.data===YT.PlayerState.ENDED) nextEpisode(); } }});
-    }
-    function setupPlayer(e){ e.target.playVideo(); showLoader(); setTimeout(()=>{ init(); hideLoader(); },3000);
-      document.querySelector('.video-container').addEventListener('click',()=>{ player.unMute(); player.setVolume(100); },{ once:true });
-      document.getElementById('muteToggle').onclick = function(){ if(player.isMuted()){ player.unMute(); this.textContent='Mute'; } else { player.mute(); this.textContent='Unmute'; }};
+      const overlay = document.getElementById('loaderOverlay');
+      const bar = document.getElementById('loaderBar');
+      overlay.style.display = 'flex';
+      let elapsed = 0, duration = 5000, interval = 100;
+      const timer = setInterval(() => {
+        elapsed += interval;
+        bar.style.width = Math.min((elapsed / duration) * 100, 100) + '%';
+        if (elapsed >= duration) clearInterval(timer);
+      }, interval);
     }
 
-    function init(){
-      const list = document.getElementById('episodeList'); list.innerHTML='';
-      episodes.forEach((ep,i)=>{ const d=document.createElement('div'); d.className='episode-btn'; d.textContent=ep.title; d.onclick=()=>{ idx=i; loadEpisode(); }; list.appendChild(d); });
-      loadEpisode();
+    function hideLoader() {
+      document.getElementById('loaderOverlay').style.display = 'none';
     }
-    function loadEpisode(){ player.loadVideoById(episodes[idx].link); document.getElementById('episodeDisplay').textContent = `Episode ${idx+1}`; document.querySelectorAll('.episode-btn').forEach((b,i)=>b.classList.toggle('active',i===idx)); }
-    function nextEpisode(){ if(idx<episodes.length-1){ idx++; loadEpisode(); }}
-    function prev
+
+    function onYouTubeIframeAPIReady() {
+      player = new YT.Player('videoPlayer', {
+        videoId: episodes[0].link,
+        playerVars: {
+          autoplay: 1,
+          controls: 0,
+          modestbranding: 1,
+          rel: 0,
+          playsinline: 1
+        },
+        events: {
+          onReady: (e) => {
+            e.target.playVideo();
+            // leave muted for autoplay, browser policy
+            showLoader();
+            setTimeout(() => {
+              init();
+              hideLoader();
+            }, 5000);
+
+            // Unmute on first container click
+            document.querySelector('.video-container').addEventListener('click', () => {
+              player.unMute();
+              player.setVolume(100);
+            }, { once: true });
+
+            // Mute/unmute toggle button
+            const muteBtn = document.getElementById('muteToggle');
+            muteBtn.onclick = () => {
+              if (player.isMuted()) {
+                player.unMute();
+                muteBtn.textContent = 'Mute';
+              } else {
+                player.mute();
+                muteBtn.textContent = 'Unmute';
+              }
+            };
+          },
+          onStateChange: e => { if (e.data === YT.PlayerState.ENDED) nextEpisode(); }
+        }
+      });
+    }
+
+    function init() {
+      loadEpisodes();
+      updateDisplay();
+    }
+
+    function loadEpisodes() {
+      const list = document.getElementById('episodeList');
+      list.innerHTML = '';
+      episodes.forEach((ep, i) => {
+        const btn = document.createElement('div');
+        btn.className = 'episode-btn';
+        btn.textContent = ep.title;
+        btn.onclick = () => {
+          currentEpisodeIndex = i;
+          player.loadVideoById(ep.link);
+          updateDisplay();
+        };
+        list.appendChild(btn);
+      });
+    }
+
+    function updateDisplay() {
+      document.getElementById('episodeDisplay').textContent = `Episode ${currentEpisodeIndex + 1}`;
+      document.querySelectorAll('.episode-btn').forEach((b, i) => {
+        b.classList.toggle('active', i === currentEpisodeIndex);
+      });
+    }
+
+    function nextEpisode() {
+      if (currentEpisodeIndex < episodes.length - 1) {
+        currentEpisodeIndex++;
+        player.loadVideoById(episodes[currentEpisodeIndex].link);
+        updateDisplay();
+      }
+    }
+    function prevEpisode() {
+      if (currentEpisodeIndex > 0) {
+        currentEpisodeIndex--;
+        player.loadVideoById(episodes[currentEpisodeIndex].link);
+        updateDisplay();
+      }
+    }
+
+    function showControls() {
+      clearTimeout(hideControlsTimer);
+      document.getElementById('videoControls').style.opacity = 1;
+      document.getElementById('progress-bar').style.opacity = 1;
+      hideControlsTimer = setTimeout(() => {
+        document.getElementById('videoControls').style.opacity = 0;
+        document.getElementById('progress-bar').style.opacity = 0;
+      }, 3000);
+    }
+
+    function seek(sec) {
+      player.seekTo(player.getCurrentTime() + sec, true);
+    }
+    function togglePlayPause() {
+      const state = player.getPlayerState();
+      state === YT.PlayerState.PLAYING ? player.pauseVideo() : player.playVideo();
+    }
+    function toggleFullscreen() {
+      const el = document.querySelector('.video-container');
+      !document.fullscreenElement ? el.requestFullscreen() : document.exitFullscreen();
+    }
+
+    const progressBar = document.getElementById('progress-bar'),
+          progress = document.getElementById('progress');
+    progressBar.addEventListener('mousedown', e => { isDragging = true; updateSeek(e); });
+    document.addEventListener('mousemove', e => { if (isDragging) updateSeek(e); });
+    document.addEventListener('mouseup', () => { isDragging = false; });
+    function updateSeek(e) {
+      const rect = progressBar.getBoundingClientRect();
+      let x = Math.max(0, Math.min(e.clientX - rect.left, rect.width));
+      const pct = x / rect.width;
+      progress.style.width = pct * 100 + '%';
+      if (player && player.seekTo) player.seekTo(pct * player.getDuration(), true);
+    }
+    setInterval(() => {
+      if (!isDragging && player && player.getCurrentTime) {
+        const pct = (player.getCurrentTime() / player.getDuration()) * 100;
+        progress.style.width = pct + '%';
+      }
+    }, 200);
+
+    function filterEpisodes() {
+      const q = document.getElementById('searchBox').value.toLowerCase();
+      document.querySelectorAll('#episodeList .episode-btn').forEach(btn => {
+        btn.style.display = btn.textContent.toLowerCase().includes(q) ? 'block' : 'none';
+      });
+    }
+  </script>
+</body>
+</html>
