--- a/copyright.html
+++ b/copyright.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Doosh Hub – Anime Copyright Information</title>
-  <meta name="description" content="Doosh Hub Anime Section – Copyright disclaimer and responsible streaming notice for embedded Muse Asia content." />
-  <meta name="keywords" content="Doosh Hub, Muse Asia, Anime Streaming, Anime Disclaimer, Copyright Policy, Legal Streaming" />
+  <title>Doosh Hub – Copyright Disclaimer & DMCA Policy</title>
+  <meta name="description" content="Doosh Hub Anime – Responsible use of Muse Asia content, legal disclaimer, and DMCA compliance for embedded anime videos." />
+  <meta name="keywords" content="Doosh Hub, Muse Asia, Anime Legal, DMCA, Anime Copyright, Fair Use, Streaming Policy" />
   <meta name="author" content="Himanshu Pandey" />
   <link rel="icon" href="Screenshot_2025-04-05-08-08-19-87.jpg" type="image/jpeg" sizes="32x32" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -18,7 +18,6 @@
       animation: fireGlow 10s infinite alternate;
       padding: 2rem;
     }
-
     @keyframes fireGlow {
       0% {
         background-color: #0f0f0f;
@@ -33,30 +32,25 @@
         box-shadow: 0 0 50px #ff00ff, 0 0 70px #ff4500 inset;
       }
     }
-
     .container {
-      max-width: 800px;
+      max-width: 850px;
       margin: 0 auto;
       text-align: left;
     }
-
     h1 {
       font-size: 2.5rem;
       color: #ff00ff;
       text-shadow: 0 0 20px #ff00ff, 0 0 30px #ff4500;
       margin-bottom: 1rem;
     }
-
     p, h3 {
       margin-bottom: 1rem;
       line-height: 1.8;
     }
-
     h3 {
       font-size: 1.25rem;
       color: #ff00ff;
     }
-
     .subscribe-btn, .nav-btn {
       display: inline-block;
       padding: 0.75rem 1.5rem;
@@ -67,21 +61,17 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.4);
       cursor: pointer;
     }
-
     .subscribe-btn {
       background-color: #ff0000;
       color: white;
     }
-
     .subscribe-btn:hover {
       background-color: #cc0000;
     }
-
     .nav-btn {
       background-color: #ff00ff;
       color: white;
     }
-
     .nav-btn:hover {
       background-color: #e600e6;
     }
@@ -89,22 +79,31 @@
 </head>
 <body>
   <div class="container">
-    <h1>Anime Copyright Information</h1>
-    <p>Welcome to Doosh Hub’s anime section! We do <strong>not</strong> host or store any anime content on our servers. All anime videos are embedded directly from official sources like Muse Asia. We do not claim any ownership over these videos.</p>
+    <h1>Copyright Disclaimer & DMCA Policy</h1>
 
-    <h3>1. Hosting & Distribution</h3>
-    <p>All embedded anime episodes come from Muse Asia’s official YouTube channel. We preserve their ads, branding, and all original attributions.</p>
+    <p>Welcome to <strong>Doosh Hub</strong>, your gateway to watching anime officially and responsibly. We are committed to supporting the anime industry, and we do <strong>not</strong> host or distribute any anime videos ourselves. All anime content on this site is embedded from trusted, official sources like <strong>Muse Asia</strong>.</p>
 
-    <h3>2. Monetization</h3>
-    <p>This site is monetized with display ads, but it remains non-commercial in spirit—our goal is to support the anime industry by driving traffic back to official sources.</p>
+    <h3>1. Hosting & Attribution</h3>
+    <p>We do not host any anime content on our servers. All episodes and videos are embedded directly from <strong>Muse Asia’s official YouTube channel</strong>, with their branding, video ads, and channel promotion fully preserved. We also promote their channel sitewide and encourage users to subscribe.</p>
 
-    <h3>3. Your Responsibility</h3>
-    <p>By watching anime here, you agree to view it via Muse Asia’s official embeds. Please do not download or redistribute any content.</p>
+    <h3>2. Fair Use & Good Faith</h3>
+    <p>Doosh Hub operates under the principles of fair use. We do not alter, re-upload, download, or redistribute copyrighted content. Our aim is to curate and provide convenient access to publicly available, legally hosted anime episodes for fans across India and beyond.</p>
 
-    <h3>4. Inquiries & Removal Requests</h3>
-    <p>If you are a rights holder and wish to request removal of any content, please contact us directly at 
-      <a href="mailto:kenovogaming9@gmail.com" class="text-pink-400 underline">kenovogaming9@gmail.com</a>.
-    </p>
+    <h3>3. Monetization Notice</h3>
+    <p>This site uses display advertisements (such as Monetag, AdQuake, etc.) to support development and server costs. We do not sell anime or charge users to access videos. Monetization is not derived from the content itself but from the platform around it.</p>
+
+    <h3>4. DMCA Compliance</h3>
+    <p>We respect the rights of all creators and distributors. If you are a copyright owner and believe any material on this site infringes your rights, please contact us with the relevant details. We will act promptly to resolve your concern or remove the content in question.</p>
+    <p>Contact email: <a href="mailto:kenovogaming9@gmail.com" class="text-pink-400 underline">kenovogaming9@gmail.com</a></p>
+
+    <h3>5. Intent to Collaborate or License</h3>
+    <p>As our platform grows, we aim to build partnerships and obtain licenses where needed. If our user base expands significantly, we are fully open to purchasing licensing rights or collaborating with rights holders like Muse Asia, legal distributors, or publishers.</p>
+
+    <h3>6. Legal Viewing Reminder</h3>
+    <p>We encourage all users to watch content through official sources. Please <strong>do not attempt to download, re-upload, or manipulate</strong> the videos shown on our platform. Your support of official channels helps the anime industry grow.</p>
+
+    <h3>7. Our Mission</h3>
+    <p>Doosh Hub is a fan-driven site focused on anime discovery and accessibility. We believe in amplifying creators—not replacing them. We strongly recommend that all users <strong>subscribe to Muse Asia</strong> and other official anime publishers.</p>
 
     <a href="https://youtube.com/@museasia?si=6x9eXmTP93_PuwT-" target="_blank" class="subscribe-btn">Subscribe to Muse Asia</a>
     <a href="index.html" class="nav-btn">Go Back</a>
